app/styles/partials/_loader.scss
.bad-loader {
    position: absolute;
	float: left;
    background-color: $bad-white;
    z-index: 200;
    opacity: 1;
    width: 100%;
    height: 100%;
    display: table;
    padding-right: 200px;
    padding-left: 80px;

    z-index: 2;

    @include transition(all 0.3s ease-in-out);
    &.ng-hide {
        opacity: 0;
    }

    .bad-loader-content {
        display: table-cell;
        vertical-align: middle;
        height: 100%;
        width: 100%;
        text-align: center;

        .spinner {
            display: inline-block;
            width: 40px;
            height: 40px;
            background-color: #333;

            border-radius: 100%;
            -webkit-animation: scaleout 1.0s infinite ease-in-out;
            animation: scaleout 1.0s infinite ease-in-out;
        }
    }
}

@-webkit-keyframes scaleout {
  0% { -webkit-transform: scale(0.0) }
  100% {
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

@keyframes scaleout {
  0% {
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 100% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

